--- a/src/App.css
+++ b/src/App.css
@@ -67,7 +67,7 @@
   color: #F5B027;
 }
 
-.product-title {
+.bg-color-linear {
   background: linear-gradient(to top, #DE6089 0%, #F6B696 100%);
 }
 
@@ -100,8 +100,8 @@
 }
 
 .profile-name {
-  width: 4%;
-  height: 58px
+  width: 59px;
+  height: 60px;
 }
 
 input.search-input::placeholder {
@@ -165,8 +165,7 @@ input.search-input {
 
 .product-card img {
   width: 100%;
-  height: auto;
-  object-fit: contain;
+  height: 200px;
 }
 
 .swiper-button-prev,
@@ -180,6 +179,11 @@ input.search-input {
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
+}
+
+.card:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.15);
 }
 
 .product-img-wrapper {
@@ -226,14 +230,16 @@ input.search-input {
     left: 0;
     right: 0;
     z-index: 1100;
-    background: linear-gradient(to top, #ddd6f3 0%, #faaca8 124%);
   }
 
 
   .nav-links.show {
     left: 0;
+    background: linear-gradient(to top, #DE6089 0%, #F6B696 100%);
+    top: 0
   }
 }
+
 
 /* admin css */
 .admin-nav-links {
@@ -270,7 +276,6 @@ input.search-input {
   opacity: 0.1;
   bottom: -10px;
   right: 10px;
-  color: #000;
 }
 
 .dashboard-card span {
@@ -282,9 +287,6 @@ input.search-input {
   margin-top: 10px;
   color: #333;
 }
-
-
-.total-user-icon {}
 
 .scroll-bar {
   width: 100% !important;
@@ -305,7 +307,6 @@ input.search-input {
   left: 0;
   right: 0;
   z-index: 1100;
-  background: linear-gradient(to top, #ddd6f3 0%, #faaca8 124%);
 }
 
 .navbar .admin-nav-links.show {
