--- a/src/App.css
+++ b/src/App.css
@@ -117,6 +117,12 @@ input.search-input::placeholder {
   background-color: #F5B027;
 }
 
+@media screen and (max-width:1025px) {
+  .home-wrapper {
+    padding-top: 100px;
+  }
+}
+
 .bg-color-grey {
   background-color: #212529
 }
@@ -131,6 +137,11 @@ input.search-input {
   color: #000 !important;
   border-radius: 10px;
   transition: 0.3s ease;
+}
+
+.border-color {
+  border: 4px solid #F5B027 !important;
+
 }
 
 .product-wrapper {
@@ -174,6 +185,17 @@ input.search-input {
 }
 
 /* swipper */
+
+.input-field-error {
+  border: 2px solid #b02a30
+}
+
+mark {
+  color: #F5B027;
+  font-weight: bold;
+  background-color: white;
+  padding: 0 !important;
+}
 
 .product-wrapper p {
   text-overflow: ellipsis;
@@ -239,6 +261,31 @@ input.search-input {
     top: 0
   }
 }
+
+@media screen and (min-width:1440px) {
+  .about-img {
+    height: 514px;
+  }
+}
+
+.form-box {
+  border: 1px solid #1D759B;
+  box-shadow: 0px 0px 10px 0px #1D759B;
+}
+
+.delete-and-edit-box {
+  top: 12px;
+  left: 23%;
+  transform: translateX(-50%);
+  z-index: 10;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.15);
+}
+
+.three-dot-icon:hover .delete-and-edit-box {
+  display: flex !important;
+  /* make it visible on hover */
+}
+
 
 
 /* admin css */
